--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.45.0",
-    "canvas-confetti": "^1.9.3",
+    "@supabase/supabase-js": "^2.39.3",
+    "canvas-confetti": "^1.6.0",
     "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "@types/node": "^20.8.10",
+    "@types/react": "^18.2.33",
+    "eslint": "^8.52.0",
+    "eslint-config-next": "14.2.5",
+    "typescript": "^5.2.2"
   }
 }
