--- a/package.json
+++ b/package.json
@@ -6,21 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "eject": "react-scripts eject"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.3",
-    "canvas-confetti": "^1.6.0",
+    "@supabase/supabase-js": "^2.21.0",
     "next": "14.2.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "^20.8.10",
-    "@types/react": "^18.2.33",
-    "eslint": "^8.52.0",
-    "eslint-config-next": "14.2.5",
-    "typescript": "^5.2.2"
+    "react-dom": "^18.2.0",
+    "canvas-confetti": "^1.6.0"
   }
 }
