--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.21.0",
+    "@vercel/analytics": "^1.3.1",
+    "canvas-confetti": "^1.6.0",
     "next": "14.2.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "canvas-confetti": "^1.6.0"
+    "react-dom": "^18.2.0"
   }
 }
